--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -3,10 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./style.css" rel="stylesheet"/>
+  <script src="./app.js"></script>
   <title>Document</title>
 </head>
 <body>
-  
+  <nav class="nav">
+  <span class="logo">Weather App</span>
+  <div class="circle-red">
+  </div>
+  </nav>
+
+  <section >
+    <span>
+     <input placeholder="Enter the city name"/>
+     <button id="search-icon">🔍</button>
+    </span>
+  </section>
+
+
 
 </body>
-</html>m
+</html>
