Added icons and description

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -13,6 +13,8 @@
   </nav>
 
   <div class="container">
+    <h3 class="heading">Search Your City</h3>
+
     <span class="input">
       <input id="city-input" placeholder="Enter the city name"/>
       <button id="search-icon">🔍</button>
@@ -24,6 +26,11 @@
       </span>
       <span class="result">
         <p class="temperature"></p>
+        <p class="icon-description">
+          <img src="" alt="icon" class="icon"/>
+          <span class="description"></span>
+        </p>
+
         <p class="humidity"></p>
       </span>
     </section>
