--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div id="app" class="">
+    <div id="app" class="bg-slate-100">
 
       <!-- Nav bar -->
       <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
@@ -25,15 +25,36 @@
       <!-- Nav bar -->
 
       <!-- products Listing -->
+       <div class="">
+      <div id="product-list" class="flex flex-col md:flex-row items-center justify-center mx-auto flex-wrap gap-4 m-4 p-4">
 
-      <template>
-        <div class="flex flex-col justify-center items-center">
-        <img id="product-img" src="" alt="" class=""/>
-        <h2 id="product-title"></h3>
+      </div>
+      </div>
+
+      <template id="product-card">
+<div class="flex flex-col justify-start items-start md:w-[23%] w-[70vw]  h-[63vh] shadow-lg p-4 rounded-md bg-white">
+<span class="bg-gray-50 rounded-md w-full">
+
+
+  <img id="product-img" src="" alt="" class="h-40 w-auto mx-auto bg-gray "/>
+  </span>
+
+        <h2 id="product-title" class="font-bold text-lg "></h3>
+          <h3 id="product-brand" class="font-semibold italic text-gray-600"></h3>
+          <div id="product-tags" class="p-1 text-sm flex"></div>
         <p id="product-rating"></p>
-        <p id="product-description"></p>
-        <h3 id="product-price"></h3>
-        <h3 id="product-actual-price"></h3>
+        <p id="product-description" class="text-gray-600 line-clamp-2 pr-2"></p>
+       <span class="flex justify-between w-full bottom-1">
+        <h3 id="product-price" class="font-bold"></h3>
+        <h3 id="product-actual-price" class="text-gray-600 line-through "></h3>
+       </span>
+       <span class="flex justify-between w-full">
+        <button class="border-2 border-gray-600 text-black hover:text-white rounded-md hover:bg-gray-600 px-4 py-2 mt-2">Add to Cart</button>
+       <a class="border-2 border-gray-600 bg-gray-600 text-white hover:text-black rounded-md hover:bg-white px-4 py-2 mt-2"
+        id="product-page-link"
+        href="">View Product</a>
+
+       </span>
 
         </div>
       </template>
