--- a/e-commerce/product.html
+++ b/e-commerce/product.html
@@ -8,7 +8,34 @@
   <title>Product Detail</title>
 </head>
 <body>
-  <h1>Product Detail Page</h1>
+
+        <!-- Nav bar -->
+        <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
+          <span class="font-bold text-xl font-serif">YoungGods</span>
+
+          <ul class="flex gap-6 font-semibold ">
+            <li class="cursor-pointer hover:text-blue-500">Home</li>
+            <li  class="cursor-pointer hover:text-blue-500">Shop</li>
+            <li  class="cursor-pointer hover:text-blue-500">Contact Us</li>
+            <li  class="cursor-pointer hover:text-blue-500">Cart</li>
+          </ul>
+        </nav>
+        <!-- Nav bar -->
+  <div>
+    <template id="product-details">
+      <section>
+        <img src="" alt="" id="product-img" class=""/>
+        <article>
+          <h3 id="product-title" class=""></h3>
+          <h3 id="product-brand" class=""></h3>
+
+
+        </article>
+
+      </section>
+
+    </template>
+  </div>
 
 
   <script type="module" src="./product.js"></script>
