--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -1,66 +1,74 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>E-Commerce</title>
-  </head>
-  <body>
 
-    <div id="app" class="bg-slate-100">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>E-Commerce</title>
+</head>
 
-      <!-- Nav bar -->
-      <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
-        <span class="font-bold text-xl font-serif">YoungGods</span>
+<body>
 
-        <ul class="flex gap-6 font-semibold ">
-          <li class="cursor-pointer hover:text-blue-500">Home</li>
-          <li  class="cursor-pointer hover:text-blue-500">Shop</li>
-          <li  class="cursor-pointer hover:text-blue-500">Contact Us</li>
-          <li  class="cursor-pointer hover:text-blue-500">Cart</li>
-        </ul>
-      </nav>
-      <!-- Nav bar -->
+  <div id="app" class="bg-slate-100">
 
-      <!-- products Listing -->
-       <div class="">
-      <div id="product-list" class="flex flex-col md:flex-row items-center justify-center mx-auto flex-wrap gap-4 m-4 p-4">
+    <!-- Nav bar -->
+    <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
+      <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
+
+
+      <ul class="flex gap-6 font-semibold ">
+        <li class="cursor-pointer hover:text-blue-500 bg-blue-500">Home</li>
+        <li class="cursor-pointer hover:text-blue-500">Shop</li>
+        <li class="cursor-pointer hover:text-blue-500">Contact Us</li>
+        <li class="cursor-pointer hover:text-blue-500">Cart</li>
+      </ul>
+    </nav>
+    <!-- Nav bar -->
+
+    <!-- products Listing -->
+    <div class="">
+      <div id="product-list"
+        class="flex flex-col md:flex-row items-center justify-center mx-auto flex-wrap gap-4 m-4 p-4">
 
       </div>
-      </div>
-
-      <template id="product-card">
-<div class="flex flex-col justify-start items-start md:w-[23%] w-[70vw]  h-[63vh] shadow-lg p-4 rounded-md bg-white">
-<span class="bg-gray-50 rounded-md w-full">
-
-
-  <img id="product-img" src="" alt="" class="h-40 w-auto mx-auto bg-gray "/>
-  </span>
-
-        <h2 id="product-title" class="font-bold text-lg "></h3>
-          <h3 id="product-brand" class="font-semibold italic text-gray-600"></h3>
-          <div id="product-tags" class="p-1 text-sm flex"></div>
-        <p id="product-rating"></p>
-        <p id="product-description" class="text-gray-600 line-clamp-2 pr-2"></p>
-       <span class="flex justify-between w-full bottom-1">
-        <h3 id="product-price" class="font-bold"></h3>
-        <h3 id="product-actual-price" class="text-gray-600 line-through "></h3>
-       </span>
-       <span class="flex justify-between w-full">
-        <button class="border-2 border-gray-600 text-black hover:text-white rounded-md hover:bg-gray-600 px-4 py-2 mt-2">Add to Cart</button>
-       <a class="border-2 border-gray-600 bg-gray-600 text-white hover:text-black rounded-md hover:bg-white px-4 py-2 mt-2"
-        id="product-page-link"
-        href="">View Product</a>
-
-       </span>
-
-        </div>
-      </template>
-
-
     </div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+    <template id="product-card">
+      <div
+        class="flex flex-col justify-start items-start md:w-[23%] w-[70vw]  h-[63vh] shadow-lg p-4 rounded-md bg-white">
+        <span class="bg-gray-50 rounded-md w-full">
+
+
+          <img id="product-img" src="" alt="" class="h-40 w-auto mx-auto bg-gray " />
+        </span>
+
+        <h2 id="product-title" class="font-bold text-lg ">
+          </h3>
+          <h3 id="product-brand" class="font-semibold italic text-gray-600"></h3>
+          <div id="product-tags" class="p-1 text-sm flex flex-wrap"></div>
+          <p id="product-rating"></p>
+          <p id="product-description" class="text-gray-600 line-clamp-2 pr-2"></p>
+          <span class="flex justify-between w-full bottom-1">
+            <h3 id="product-price" class="font-bold"></h3>
+            <h3 id="product-actual-price" class="text-gray-600 line-through "></h3>
+          </span>
+          <span class="flex justify-between w-full">
+            <button
+              class="border-2 border-gray-600 text-black hover:text-white rounded-md hover:bg-gray-600 px-2 py-1 mt-2">Add
+              to Cart</button>
+            <a class="border-2 border-gray-600 bg-gray-600 text-white hover:text-black rounded-md hover:bg-white px-2 py-1 mt-2"
+              id="product-page-link" href="">View Product</a>
+
+          </span>
+
+      </div>
+    </template>
+
+
+  </div>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
