--- a/e-commerce/product.html
+++ b/e-commerce/product.html
@@ -11,7 +11,7 @@
 
         <!-- Nav bar -->
         <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
-          <span class="font-bold text-xl font-serif">YoungGods</span>
+          <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
 
           <ul class="flex gap-6 font-semibold ">
             <li class="cursor-pointer hover:text-blue-500">Home</li>
