Updated nav links

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -19,7 +19,7 @@
 
 
       <ul class="flex gap-6 font-semibold ">
-        <li class="cursor-pointer hover:text-blue-500 bg-blue-500">Home</li>
+        <li class="cursor-pointer hover:text-blue-500 text-blue-500 underline">Home</li>
         <li class="cursor-pointer hover:text-blue-500">Shop</li>
         <li class="cursor-pointer hover:text-blue-500">Contact Us</li>
         <li class="cursor-pointer hover:text-blue-500">Cart</li>
