--- a/e-commerce/product.html
+++ b/e-commerce/product.html
@@ -14,7 +14,7 @@
           <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
 
           <ul class="flex gap-6 font-semibold ">
-            <li class="cursor-pointer hover:text-blue-500">Home</li>
+            <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a> </li>
             <li  class="cursor-pointer hover:text-blue-500">Shop</li>
             <li  class="cursor-pointer hover:text-blue-500">Contact Us</li>
             <li  class="cursor-pointer hover:text-blue-500">Cart</li>
