--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -71,7 +71,7 @@
   <script type="module" src="/main.js"></script>
 </body>
  <footer class="bg-gray-800 text-gray-300 py-10">
-  <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+  <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 p-4">
 
 
     <div>
