--- a/e-commerce/product.html
+++ b/e-commerce/product.html
@@ -62,7 +62,7 @@
 
   <script type="module" src="./product.js"></script>
 </body>
-<footer class="bg-gray-800 text-gray-300 py-10">
+<footer class="bg-gray-800 text-gray-300 py-10 p-4">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
 
 
