--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -120,7 +120,7 @@
   </div>
 
 
-  <div class="border-t border-gray-700 mt-8 pt-4">
+  <div class="border-t border-gray-700 mt-8 p-4">
     <div class="container mx-auto flex flex-col sm:flex-row justify-between text-sm">
       <p>&copy; 2024 E-Commerce. All Rights Reserved.</p>
       <div class="flex space-x-4">
