--- a/e-commerce/product.html
+++ b/e-commerce/product.html
@@ -7,7 +7,7 @@
 
   <title>Product Detail</title>
 </head>
-<body>
+<body class="min-h-screen">
 
         <!-- Nav bar -->
         <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
@@ -112,7 +112,7 @@
   </div>
 
 
-  <div class="border-t border-gray-700 mt-8 pt-4">
+  <div class="border-t border-gray-700 mt-8 p-4">
     <div class="container mx-auto flex flex-col sm:flex-row justify-between text-sm">
       <p>&copy; 2024 E-Commerce. All Rights Reserved.</p>
       <div class="flex space-x-4">
