Added add to cart feature

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -56,7 +56,7 @@
           </span>
           <span class="flex justify-between w-full">
             <button
-              class="border-2 border-gray-600 text-black hover:text-white rounded-md hover:bg-gray-600 px-2 py-1 mt-2">Add
+              class="border-2 border-gray-600 text-black hover:text-white rounded-md hover:bg-gray-600 px-2 py-1 mt-2 add-to-cart">Add
               to Cart</button>
             <a class="border-2 border-gray-600 bg-gray-600 text-white hover:text-black rounded-md hover:bg-white px-2 py-1 mt-2"
               id="product-page-link" href="">View Product</a>
