--- a/e-commerce/usercart.html
+++ b/e-commerce/usercart.html
@@ -6,8 +6,23 @@
   <title>Cart </title>
 </head>
 <body>
+
+
+          <!-- Nav bar -->
+          <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
+            <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
+
+            <ul class="flex gap-6 font-semibold ">
+              <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a> </li>
+              <li  class="cursor-pointer hover:text-blue-500">Shop</li>
+              <li  class="cursor-pointer hover:text-blue-500">Contact Us</li>
+          <li class="cursor-pointer hover:text-blue-500"><a href="./usercart.html">Cart</a></li>
+
+            </ul>
+          </nav>
+          <!-- Nav bar -->
   <h1>User Cart</h1>
-  <div id="cart-items">
+  <div class="flex flex-col item-center " id="cart-items">
 
   </div>
   <template id="cart-item">
