--- a/e-commerce/usercart.html
+++ b/e-commerce/usercart.html
@@ -38,4 +38,66 @@
   </template>
 <script src="./cart.js"></script>
 </body>
+<!-- Footer Section -->
+<footer class="bg-gray-800 text-gray-300 py-10 p-4">
+  <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+
+
+    <div>
+      <h3 class="text-white text-xl font-semibold mb-4">About Us</h3>
+      <p class="text-sm">
+        We are a leading e-commerce platform dedicated to providing the best products at the most competitive prices.
+      </p>
+    </div>
+
+
+    <div>
+      <h3 class="text-white text-xl font-semibold mb-4">Quick Links</h3>
+      <ul>
+        <li class="mb-2"><a href="#" class="hover:text-white">Home</a></li>
+        <li class="mb-2"><a href="#" class="hover:text-white">Shop</a></li>
+        <li class="mb-2"><a href="#" class="hover:text-white">About Us</a></li>
+        <li class="mb-2"><a href="#" class="hover:text-white">Contact</a></li>
+      </ul>
+    </div>
+
+
+    <div>
+      <h3 class="text-white text-xl font-semibold mb-4">Contact Us</h3>
+      <p class="text-sm mb-2">
+        <i class="fas fa-phone-alt"></i> +1 (123) 456-7890
+      </p>
+      <p class="text-sm mb-2">
+        <i class="fas fa-envelope"></i> support@ecommerce.com
+      </p>
+      <p class="text-sm">
+        <i class="fas fa-map-marker-alt"></i> 123 E-Commerce St, Online City, USA
+      </p>
+    </div>
+
+
+    <div>
+      <h3 class="text-white text-xl font-semibold mb-4">Newsletter</h3>
+      <p class="text-sm mb-4">Subscribe to our newsletter to get the latest updates and offers.</p>
+      <form>
+        <input type="email" placeholder="Your email" class="w-full px-3 py-2 mb-4 text-gray-800 rounded focus:outline-none">
+        <button class="w-full bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors">
+          Subscribe
+        </button>
+      </form>
+    </div>
+  </div>
+
+
+  <div class="border-t border-gray-700 mt-8 p-4">
+    <div class="container mx-auto flex flex-col sm:flex-row justify-between text-sm">
+      <p>&copy; 2024 E-Commerce. All Rights Reserved.</p>
+      <div class="flex space-x-4">
+        <a href="#" class="hover:text-white">Privacy Policy</a>
+        <a href="#" class="hover:text-white">Terms of Service</a>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- Footer section -->
 </html>
