Added tailwind CDN

--- a/e-commerce/usercart.html
+++ b/e-commerce/usercart.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+
   <title>Cart </title>
 </head>
 <body>
-
-
           <!-- Nav bar -->
           <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
             <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
