Pushing to production

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -21,8 +21,9 @@
       <ul class="flex gap-6 font-semibold ">
         <li class="cursor-pointer hover:text-blue-500 text-blue-500 underline">Home</li>
         <li class="cursor-pointer hover:text-blue-500">Shop</li>
-        <li class="cursor-pointer hover:text-blue-500">Contact Us</li>
-        <li class="cursor-pointer hover:text-blue-500">Cart</li>
+        <li  class="cursor-pointer hover:text-blue-500"><a href="./contact-us.html">Contact Us</a></li>
+
+        <li class="cursor-pointer hover:text-blue-500"><a href="./usercart.html">Cart</a></li>
       </ul>
     </nav>
     <!-- Nav bar -->
