--- a/e-commerce/product.html
+++ b/e-commerce/product.html
@@ -16,8 +16,9 @@
           <ul class="flex gap-6 font-semibold ">
             <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a> </li>
             <li  class="cursor-pointer hover:text-blue-500">Shop</li>
-            <li  class="cursor-pointer hover:text-blue-500">Contact Us</li>
-            <li  class="cursor-pointer hover:text-blue-500">Cart</li>
+            <li  class="cursor-pointer hover:text-blue-500"><a href="./contact-us.html">Contact Us</a></li>
+        <li class="cursor-pointer hover:text-blue-500"><a href="./usercart.html">Cart</a></li>
+
           </ul>
         </nav>
         <!-- Nav bar -->
@@ -62,6 +63,8 @@
 
   <script type="module" src="./product.js"></script>
 </body>
+
+<!-- Footer Section -->
 <footer class="bg-gray-800 text-gray-300 py-10 p-4">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
 
@@ -122,5 +125,6 @@
     </div>
   </div>
 </footer>
+<!-- Footer section -->
 
 </html>
