added Hero section

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -21,12 +21,26 @@
       <ul class="flex gap-6 font-semibold ">
         <li class="cursor-pointer hover:text-blue-500 text-blue-500 underline">Home</li>
         <li class="cursor-pointer hover:text-blue-500">Shop</li>
-        <li  class="cursor-pointer hover:text-blue-500"><a href="./contact-us.html">Contact Us</a></li>
+        <li  class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
 
-        <li class="cursor-pointer hover:text-blue-500"><a href="./usercart.html">Cart</a></li>
+        <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
       </ul>
     </nav>
     <!-- Nav bar -->
+
+    <section class="bg-white">
+      <div class="relative overflow-hidden bg-cover bg-center" style="background-image: url('https://via.placeholder.com/1600x900'); height: 90vh;">
+        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+
+        <div class="container mx-auto px-6 md:px-12 lg:px-16 h-full flex items-center">
+          <div class="relative z-10 text-white max-w-2xl">
+            <h1 class="text-4xl md:text-6xl font-bold mb-6">Discover Our Exclusive Collection</h1>
+            <p class="text-lg md:text-xl mb-8">Upgrade your style with the latest trends. Shop now and enjoy exclusive offers on premium products!</p>
+            <a href="#shop" class="bg-green-500 hover:bg-green-600 text-white py-3 px-6 rounded-md text-lg font-semibold">Shop Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- products Listing -->
     <div class="">
