--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -36,7 +36,7 @@
     <button class="bg-red-700 font-semibold px-4 py-2 text-white rounded-md">Remove Item</button>
     </div>
   </template>
-<script src="./cart.js"></script>
+<script src="../scripts/cart.js"></script>
 </body>
 <!-- Footer Section -->
 <footer class="bg-gray-800 text-gray-300 py-10 p-4">
