--- a/e-commerce/pages/contact-us.html
+++ b/e-commerce/pages/contact-us.html
@@ -10,18 +10,37 @@
 
 <body class="bg-gray-100">
 
-  <!-- Nav bar -->
-  <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
+   <!-- Nav bar -->
+
+   <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
     <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
 
-    <ul class="flex gap-6 font-semibold ">
-      <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a> </li>
-      <li class="cursor-pointer hover:text-blue-500">Shop</li>
-      <li class="cursor-pointer hover:text-blue-500"><a href="./contact-us.html">Contact Us</a></li>
-      <li class="cursor-pointer hover:text-blue-500"><a href="./usercart.html">Cart</a></li>
+    <!-- Hamburger Menu  -->
+    <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+      </svg>
+    </button>
 
+    <!-- Navigation Links -->
+    <ul id="menu" class="hidden md:flex gap-6 font-semibold">
+      <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a></li>
+      <li class="cursor-pointer hover:text-blue-500"><a href="./pages/shop.html">Shop</a></li></li>
+      <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
+      <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
     </ul>
   </nav>
+
+  <!-- Mobile Menu (Dropdown) -->
+  <ul id="mobile-menu" class="hidden flex-col gap-4 mt-4 md:hidden bg-slate-100 px-8 py-4">
+    <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a></li>
+    <li class="cursor-pointer hover:text-blue-500"><a href="./pages/shop.html">Shop</a></li></li>
+    <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
+    <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
+  </ul>
+
+  <!-- Nav bar End -->
+
 
   <div class="container mx-auto p-6 bg-white rounded-lg shadow-md mt-10">
     <h1 class="text-2xl font-bold text-center mb-4">Contact Us</h1>
