Added bg for hero section:

--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -51,7 +51,7 @@
     </span>
     <h3 id="cart-title" class="font-bold text-lg w-[320px] px-2"></h3>
     <p id="cart-quantity"></p>
-    <button class="bg-red-700 font-semibold px-4 py-2 text-white rounded-md">Remove Item</button>
+    <button  class="bg-red-700 font-semibold px-4 py-2 text-white rounded-md remove-btn">Remove Item</button>
     </div>
   </template>
 <script src="../scripts/cart.js"></script>
