--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -43,9 +43,9 @@
     </ul>
 
     <!-- Nav bar End -->
-
+    <!-- Hero Section -->
     <section class="bg-white">
-      <div class="relative overflow-hidden bg-cover bg-center" style="background-image: url('https://via.placeholder.com/1600x900'); height: 90vh;">
+      <div class="relative overflow-hidden bg-cover bg-center" style="background-image: url('./public/black-friday-elements-assortment.jpg'); height: 90vh;">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
         <div class="container mx-auto px-6 md:px-12 lg:px-16 h-full flex items-center">
