Added remove item from the cart functionality

--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -45,7 +45,7 @@
   </div>
   <template id="cart-item">
     <div id="cart" class="flex justify-center items-center gap-4">
-    <span class="bg-gray-100 p-8">
+    <span id="img-container" class="bg-gray-100 p-8">
       <img id="cart-img" src="" alt="" class="h-28 w-auto"/>
 
     </span>
