--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -52,7 +52,7 @@
           <div class="relative z-10 text-white max-w-2xl">
             <h1 class="text-4xl md:text-6xl font-bold mb-6">Discover Our Exclusive Collection</h1>
             <p class="text-lg md:text-xl mb-8">Upgrade your style with the latest trends. Shop now and enjoy exclusive offers on premium products!</p>
-            <a href="#shop" class="bg-green-500 hover:bg-green-600 text-white py-3 px-6 rounded-md text-lg font-semibold">Shop Now</a>
+            <a href="./pages/shop.html" class="bg-green-500 hover:bg-green-600 text-white py-3 px-6 rounded-md text-lg font-semibold">Shop Now</a>
           </div>
         </div>
       </div>
