Updated cart items to link to the product page

--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -39,14 +39,16 @@
 
     <!-- Nav bar End -->
 
-  <h1 class="text-center">User Cart</h1>
+  <h1 class="text-center text-xl font-bold underline">User Cart</h1>
   <div class="flex flex-col item-center w-screen gap-4 my-4" id="cart-items">
 
   </div>
   <template id="cart-item">
     <div id="cart" class="flex justify-center items-center gap-4">
     <span id="img-container" class="bg-gray-100 p-8">
+      <a id="cart-img-anchor" href="">
       <img id="cart-img" src="" alt="" class="h-28 w-auto"/>
+    </a>
 
     </span>
     <h3 id="cart-title" class="font-bold text-lg w-[320px] px-2"></h3>
