--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -44,18 +44,23 @@
 
   </div>
   <template id="cart-item">
-    <div id="cart" class="flex justify-center items-center gap-4">
+    <div id="cart" class="flex flex-col md:flex-row  justify-center items-center gap-2  md:gap-4">
     <span id="img-container" class="bg-gray-100 p-8">
       <a id="cart-img-anchor" href="">
       <img id="cart-img" src="" alt="" class="h-28 w-auto"/>
     </a>
 
     </span>
-    <h3 id="cart-title" class="font-bold text-lg w-[320px] px-2"></h3>
+    <h3 id="cart-title" class="font-bold text-lg md:w-[320px] w-[160px] px-2"></h3>
     <p id="cart-quantity"></p>
     <button  class="bg-red-700 font-semibold px-4 py-2 text-white rounded-md remove-btn">Remove Item</button>
     </div>
   </template>
+  <div class="w-screen flex items-center justify-center">
+  <a id="checkout-btn" href="./checkout.html" class= "border-2 text-gray-700 rounded-md border-gray-600 py-3  mx-auto w-[60%] font-semibold text-lg hover:text-white hover:bg-gray-600 my-4 text-center">Check out</a>
+
+  </div>
+
 <script src="../scripts/cart.js"></script>
 </body>
 <!-- Footer Section -->
