Added add to cart functionality

--- a/e-commerce/pages/product.html
+++ b/e-commerce/pages/product.html
@@ -55,7 +55,7 @@
 
 
           <p id="product-description" class="w-[70%] text-gray-600" ></p>
-          <button
+          <button id="add-to-cart-btn"
           class="border-2 border-gray-600 text-black hover:text-white rounded-md hover:bg-gray-600 px-2 py-1 mt-2">Add
           to Cart</button>
 
