Implemented checkout functionality

--- a/e-commerce/pages/checkout.html
+++ b/e-commerce/pages/checkout.html
@@ -12,46 +12,39 @@
   <div class="container mx-auto py-12 px-4">
     <h1 class="text-3xl font-bold mb-8">Checkout</h1>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-      <!-- <h2 class="text-xl font-semibold mb-4">Billing Information</h2> -->
+    <!-- Cart Summary -->
+    <div>
+      <h2 class="text-xl font-semibold mb-4">Order Summary</h2>
+      <div class="bg-white p-6 rounded-lg shadow-md">
 
-
-
-
-      <!-- Cart Summary -->
-      <div>
-        <h2 class="text-xl font-semibold mb-4">Order Summary</h2>
-        <div class="bg-white p-6 rounded-lg shadow-md">
-
-          <!-- Placeholder for cart items -->
-          <div id="cart-summary" class="mb-4">
-            <div id="product-container"  class="flex justify-between mb-2">
-              <span id="product-title" >Product 1</span>
+        <!-- Placeholder for cart items -->
+        <div id="cart-summary" class="mb-4">
+          <template id="product-container">
+            <div class="flex justify-between mb-2">
+              <span id="product-title">Product 1</span>
               <span id="product-price">$50.00</span>
             </div>
-            <div class="flex justify-between mb-2">
-              <span>Product 2</span>
-              <span>$30.00</span>
-            </div>
-            <div class="flex justify-between mb-2">
-              <span>Product 3</span>
-              <span>$20.00</span>
-            </div>
-          </div>
-
-          <hr class="my-4">
-
-          <!-- Total Price -->
-          <div class="flex justify-between text-xl font-semibold">
-            <span>Total</span>
-            <span>$100.00</span>
-          </div>
-
+          </template>
         </div>
-      </div>
 
+        <hr class="my-4">
+
+        <!-- Total Price -->
+        <div class="flex justify-between text-xl font-semibold">
+          <span>Total</span>
+          <span id="total">$100.00</span>
+        </div>
+
+      </div>
     </div>
+
   </div>
 
+  <!-- Checkout button -->
+  <div class="w-screen flex items-center justify-center">
+    <button id="checkout-btn" class="border-2 text-gray-700 rounded-md border-gray-600 py-3 mx-auto w-[60%] font-semibold text-lg hover:text-white hover:bg-gray-600 my-4 text-center">Prodeed To Pay</button>
+  </div>
+
+  <script src="../scripts/checkout.js"></script>
 </body>
 </html>
