--- a/e-commerce/pages/product.html
+++ b/e-commerce/pages/product.html
@@ -36,7 +36,7 @@
   <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
 </ul>
 
-  <div id="product-details-page">
+  <div id="product-details-page" class="h-screen">
     <template id="product-details">
       <section class="flex flex-col md:flex-row justify-around p-8 ">
         <div class="w-[100%] p-4 flex flex-col md:flex-row justify-center items-center bg-gray-100">
