--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -40,7 +40,7 @@
     <!-- Nav bar End -->
 
   <h1 class="text-center text-xl font-bold underline">User Cart</h1>
-  <div class="flex flex-col item-center w-screen gap-4 my-4" id="cart-items">
+  <div class="flex flex-col item-center w-screen gap-4 my-4 h-screen" id="cart-items">
 
   </div>
   <template id="cart-item">
