--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -65,7 +65,7 @@
     <!-- Hero Section -->
     <section class="bg-white">
       <div class="relative overflow-hidden bg-cover bg-center"
-        style="background-image: url('./public/black-friday-elements-assortment.jpg'); height: 90vh;">
+        style="background-image: url('./black-friday-elements-assortment.jpg'); height: 90vh;">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
         <div class="container mx-auto px-6 md:px-12 lg:px-16 h-full flex items-center">
@@ -122,6 +122,8 @@
 
   </div>
   <script type="module" src="/main.js"></script>
+  <script type="module" src="/auth.js"></script>
+
 </body>
 <footer class="bg-gray-800 text-gray-300 py-10">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 p-4">
