--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -6,6 +6,13 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script
+  async
+  crossorigin="anonymous"
+  data-clerk-publishable-key="pk_test_Zm9uZC1zbmFwcGVyLTM5LmNsZXJrLmFjY291bnRzLmRldiQ"
+  src="https://fond-snapper-39.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+  type="text/javascript"
+></script>
   <title>E-Commerce</title>
 </head>
 
@@ -122,7 +129,43 @@
 
   </div>
   <script type="module" src="/main.js"></script>
-  <script type="module" src="/auth.js"></script>
+  <!-- <script type="module" src="/auth.js"></script> -->
+
+<script>
+  window.addEventListener('load', async function () {
+
+  await Clerk.load({
+    afterSignInUrl: "/",
+    afterSignUpUrl: "/",
+    signInUrl: "/login",
+    signUpUrl: "/signup",
+    navigate: (to) => {
+      window.location.href = to;
+    },
+    polling: true, // enable session polling
+  });
+
+  if (Clerk.user) {
+
+    const userButtonDiv =
+      document.getElementById("user-button");
+      const userButtonMobileDiv =     document.getElementById("user-button-mobile");
+
+    Clerk.mountUserButton(userButtonDiv);
+    Clerk.mountUserButton(userButtonMobileDiv);
+  } else {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv =
+      document.getElementById("sign-in");
+
+    Clerk.mountSignIn(signInDiv);
+  }
+
+})
+</script>
 
 </body>
 <footer class="bg-gray-800 text-gray-300 py-10">
