--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -8,13 +8,13 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' fond-snapper-39.accounts.dev fond-snapper-39.clerk.accounts.dev cdn.jsdelivr.net scdn.clerk.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' scdn.clerk.com cdn.jsdelivr.net;"> -->
 
   <script src="https://cdn.tailwindcss.com"></script>
-  <script
+  <!-- <script
   async
   crossorigin="anonymous"
   data-clerk-publishable-key="pk_test_Zm9uZC1zbmFwcGVyLTM5LmNsZXJrLmFjY291bnRzLmRldiQ"
   src="https://fond-snapper-39.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
   type="text/javascript"
-></script>
+></script> -->
   <title>E-Commerce</title>
 </head>
 
@@ -133,7 +133,7 @@
   <script type="module" src="/main.js"></script>
   <!-- <script type="module" src="/auth.js"></script> -->
 
-<script >
+<!-- <script >
   window.addEventListener('load', async function () {
 
     await Clerk.load({
@@ -176,7 +176,7 @@
   }
 
 })
-</script>
+</script> -->
 
 </body>
 <footer class="bg-gray-800 text-gray-300 py-10">
