--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -31,9 +31,10 @@
 
 
 <div class="flex gap-4 items-center md:hidden">
-  <div id="user-button-mobile"></div>
+  <a id="log-in-btn" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md" href="./pages/authenticate.html"><p>Log In</p></a>
+  <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md " ><p>Log Out</p></a>
 
-      <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
+  <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
 
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
@@ -64,7 +65,7 @@
     <ul id="mobile-menu" class="hidden flex-col gap-4 mt-4 md:hidden bg-slate-100 px-8 py-4">
       <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a></li>
       <li class="cursor-pointer hover:text-blue-500"><a href="./pages/shop.html">Shop</a></li>
-      
+
       <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
       <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
 
