--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -31,8 +31,8 @@
 
 
 <div class="flex gap-4 items-center md:hidden">
-  <a id="log-in-btn" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md" href="./pages/authenticate.html"><p>Log In</p></a>
-  <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md " ><p>Log Out</p></a>
+  <a class="log-in-btn bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md" href="./pages/authenticate.html"><p>Log In</p></a>
+  <a class="log-out-btn bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md hidden" ><p>Log Out</p></a>
 
   <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
 
@@ -53,8 +53,8 @@
         </li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
-        <a id="log-in-btn" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md" href="./pages/authenticate.html"><li >Log In</li></a>
-        <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md " ><li >Log Out</li></a>
+        <a class="log-in-btn bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md" href="./pages/authenticate.html"><li >Log In</li></a>
+        <a class="log-out-btn bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md hidden " ><li >Log Out</li></a>
 
       </ul>
 
@@ -132,54 +132,9 @@
 
 
   </div>
+  <script type="module" src="./scripts/verifyAuthStatus.js"></script>
+
   <script type="module" src="/main.js"></script>
-  <!-- <script type="module" src="/auth.js"></script> -->
-
-<!-- <script >
-  window.addEventListener('load', async function () {
-
-    await Clerk.load({
-  afterSignInUrl: "/",
-  afterSignUpUrl: "/",
-  signInUrl: "./pages/login.html",
-  signUpUrl: "./pages/signup.html",
-  afterSignOutUrl: "/pages/login.html",  // Redirect to login after sign out
-  navigate: (to) => {
-
-    setTimeout(() => {
-      if (to.includes('fond-snapper')) {
-        window.location.href = '/pages/login.html';  // Force redirect to login page if wrong URL detected
-      } else {
-        window.location.href = to;  // Redirect normally if not an unwanted URL
-      }
-    }, 200);
-  },
-  polling: true,  // enable session polling
-});
-
-  if (Clerk.user) {
-
-    const userButtonDiv =
-      document.getElementById("user-button");
-      const userButtonMobileDiv =     document.getElementById("user-button-mobile");
-
-    Clerk.mountUserButton(userButtonDiv);
-    Clerk.mountUserButton(userButtonMobileDiv);
-  } else {
-    document.getElementById("app").innerHTML = `
-    <div style="margin: auto; height: 500px; padding-top: 18px;" id="sign-in"></div>
-
-    `;
-
-    const signInDiv =
-      document.getElementById("sign-in");
-
-    Clerk.mountSignIn(signInDiv);
-  }
-
-})
-</script> -->
-
 </body>
 <footer class="bg-gray-800 text-gray-300 py-10">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 p-4">
