--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -57,7 +57,7 @@
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
         <a id="log-in-btn" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md " href="./pages/authenticate.html"><li >Log In</li></a>
-        <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md " ><li >Log Out</li></a>
+        <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md hidden " ><li >Log Out</li></a>
 
       </ul>
 
