--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -30,21 +30,29 @@
       <!-- Hamburger Menu  -->
 
 
-<div class="flex gap-4 items-center md:hidden">
-  <div id="user-button-mobile"></div>
-<div class="flex list-none gap-3">
-  <a id="log-in-btn-mobile" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden" href="./pages/authenticate.html"><li >Log In</li></a>
-          <a id="log-out-btn-mobile" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden" ><li >Log Out</li></a>
+      <div class="flex gap-4 items-center md:hidden">
+       
+        <div class="flex list-none gap-3">
+          <a id="log-in-btn-mobile"
+            class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden"
+            href="./pages/authenticate.html">
+            <li>Log In</li>
+          </a>
+          <a id="log-out-btn-mobile"
+            class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden">
+            <li>Log Out</li>
+          </a>
 
-  <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
+          <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
 
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-        </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+            </svg>
 
 
-      </button>
-    </div>
+          </button>
+        </div>
       </div>
 
 
@@ -56,8 +64,13 @@
         </li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
-        <a id="log-in-btn" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md " href="./pages/authenticate.html"><li >Log In</li></a>
-        <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md hidden " ><li >Log Out</li></a>
+        <a id="log-in-btn" class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md "
+          href="./pages/authenticate.html">
+          <li>Log In</li>
+        </a>
+        <a id="log-out-btn" class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md hidden ">
+          <li>Log Out</li>
+        </a>
 
       </ul>
 
@@ -138,7 +151,7 @@
   <script type="module" src="./scripts/verifyAuthStatus.js"></script>
 
   <script type="module" src="/main.js"></script>
-  <script type="module" src="./scripts/verifyAuthStatus.js"></script>
+
 
 
 </body>
