--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -14,11 +14,31 @@
       <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
 
       <!-- Hamburger Menu  -->
-      <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-        </svg>
-      </button>
+          <div class="flex gap-4 items-center md:hidden">
+
+        <div class="flex list-none gap-3">
+          <!-- <a id="log-in-btn-mobile"
+            class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden"
+            href="./pages/authenticate.html">
+            <li>Log In</li>
+          </a>
+          <a id="log-out-btn-mobile"
+            class="bg-red-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden">
+            <li>Log Out</li>
+          </a> -->
+
+          <button id="menu-toggle" class="block md:hidden text-gray-700 focus:outline-none">
+
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+            </svg>
+
+
+          </button>
+        </div>
+      </div>
+
 
       <!-- Navigation Links -->
       <ul id="menu" class="hidden md:flex gap-6 font-semibold">
