--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -31,7 +31,7 @@
 
 
       <div class="flex gap-4 items-center md:hidden">
-       
+
         <div class="flex list-none gap-3">
           <a id="log-in-btn-mobile"
             class="bg-blue-500 cursor-pointer text-white font-bold px-4 py-2 rounded-md md:hidden"
@@ -59,7 +59,7 @@
       <!-- Navigation Links -->
 
       <ul id="menu" class="hidden md:flex gap-6 font-semibold items-center">
-        <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a></li>
+        <li class="cursor-pointer hover:text-blue-500 underline text-blue-500"><a href="/">Home</a></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/shop.html">Shop</a></li>
         </li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
@@ -105,6 +105,12 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="mx-auto flex justify-between px-8 py-4 bg-white w-[90%] md:w-[60%] my-4 rounded-r-full rounded-l-full">
+      <input placeholder="Search " class="w-[90%] border-none py-2 outline-none" id="Search-input"/>
+      <p>🔍</p>
+
+
     </section>
 
     <!-- products Listing -->
