--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -106,9 +106,9 @@
         </div>
       </div>
     </section>
-    <section class="mx-auto flex justify-between px-8 py-4 bg-white w-[90%] md:w-[60%] my-4 rounded-r-full rounded-l-full">
-      <input placeholder="Search " class="w-[90%] border-none py-2 outline-none" id="Search-input"/>
-      <p>🔍</p>
+    <section class="mx-auto flex justify-between items-center px-8 py-4 bg-white w-[90%] md:w-[50%] my-4 rounded-r-full rounded-l-full">
+      <input placeholder="Search " class="w-[95%] border-none py-2 outline-none" id="Search-input"/>
+      <p class="text-lg">🔍</p>
 
 
     </section>
