--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -107,8 +107,8 @@
       </div>
     </section>
     <section class="mx-auto flex justify-between items-center px-8 py-4 bg-white w-[90%] md:w-[50%] my-4 rounded-r-full rounded-l-full">
-      <input placeholder="Search " class="w-[95%] border-none py-2 outline-none" id="Search-input"/>
-      <p class="text-lg">🔍</p>
+      <input placeholder="Search " class="w-[95%] border-none py-2 outline-none" id="search-input"/>
+      <p class="text-lg" id="search-icon">🔍</p>
 
 
     </section>
@@ -123,8 +123,8 @@
 
     <template id="product-card">
       <div
-        class="flex flex-col justify-start items-start md:w-[23%] w-[70vw]  h-[63vh] shadow-lg p-4 rounded-md bg-white">
-        <span class="bg-gray-50 rounded-md w-full">
+        class="flex flex-col gap-2 justify-start items-start md:w-[23%] w-[80vw] h-[55vh] md:h-[63vh] shadow-lg p-4 rounded-md bg-white">
+        <span class="bg-gray-50 rounded-md w-full ">
 
 
           <img id="product-img" src="" alt="" class="h-40 w-auto mx-auto bg-gray " />
