--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -106,9 +106,11 @@
         </div>
       </div>
     </section>
+
+    <!-- Search section -->
     <section class="mx-auto flex justify-between items-center px-8 py-4 bg-white w-[90%] md:w-[50%] my-4 rounded-r-full rounded-l-full">
       <input placeholder="Search " class="w-[95%] border-none py-2 outline-none" id="search-input"/>
-      <p class="text-lg" id="search-icon">🔍</p>
+      <p class="text-lg cursor-pointer" id="search-icon">🔍</p>
 
 
     </section>
