--- a/e-commerce/pages/shop.html
+++ b/e-commerce/pages/shop.html
@@ -53,9 +53,9 @@
     </section>
     <!-- Category filter -->
 <section class="w-full flex justify-center">
-  <select id="category-filters" class="w-[70%] md:w-[40%] mx-auto py-2 px-4 rounded-lg md:mx-auto ">
+  <select id="category-filters" class="w-[70%] capitalize md:w-[40%] mx-auto py-2 px-4 rounded-lg md:mx-auto outline-none cursor-pointer ">
 
-      <option value="">All</option>
+      <option value="All">All</option>
 
   </select>
 </section>
@@ -101,8 +101,8 @@
 
 
   </div>
-  <script type="module" src="/main.js"></script>
-  <script src="../scripts/shop.js"></script>
+  <!-- <script type="module" src="/main.js"></script> -->
+  <script type="module" src="../scripts/shop.js"></script>
 </body>
  <footer class="bg-gray-800 text-gray-300 py-10">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 p-4">
