--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -45,7 +45,7 @@
         <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/shop.html">Shop</a></li></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
-        <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
+        <li class="cursor-pointer hover:text-blue-500 underline text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
       </ul>
     </nav>
 
