--- a/e-commerce/pages/shop.html
+++ b/e-commerce/pages/shop.html
@@ -98,13 +98,15 @@
 
       </div>
     </template>
+    <div class="w-full">
+      <div id="paginationBtns" class="w-full flex justify-center items-center"></div>
 
-
+    </div>
   </div>
   <!-- <script type="module" src="/main.js"></script> -->
   <script type="module" src="../scripts/shop.js"></script>
 </body>
- <footer class="bg-gray-800 text-gray-300 py-10">
+ <footer class="bg-gray-800 text-gray-300 py-10 bottom-0">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 p-4">
 
 
