Linked the checkout button to the thank you page

--- a/e-commerce/pages/checkout.html
+++ b/e-commerce/pages/checkout.html
@@ -42,7 +42,9 @@
 
   <!-- Checkout button -->
   <div class="w-screen flex items-center justify-center">
-    <button id="checkout-btn" class="border-2 text-gray-700 rounded-md border-gray-600 py-3 mx-auto w-[60%] font-semibold text-lg hover:text-white hover:bg-gray-600 my-4 text-center">Prodeed To Pay</button>
+    <a href="./thankYou.html" class="w-screen flex justify-center items-center" >
+    <button  id="checkout-btn" class="border-2 text-gray-700 rounded-md border-gray-600 py-3 mx-auto w-[60%] font-semibold text-lg hover:text-white hover:bg-gray-600 my-4 text-center">Prodeed To Pay</button>
+      </a>
   </div>
 
   <script src="../scripts/checkout.js"></script>
