Added name section in the nav

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -24,7 +24,7 @@
 
     <!-- Nav bar -->
 
-    <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
+    <nav id="nav" class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
       <span class="font-bold text-xl font-serif"><a href="/">Zomarzo</a> </span>
 
       <!-- Hamburger Menu  -->
